[package]
name = "rquickjs-llrt-demo"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "rquickjs-llrt-demo"
repository = "https://github.com/ahaoboy/rquickjs-llrt-demo"
homepage = "https://github.com/ahaoboy/rquickjs-llrt-demo"
authors = ["ahaoboy"]

[dependencies]
rquickjs = { version = "0.6.2", features = ["loader"] }
anyhow = "1.0.89"
llrt_modules = { git = "https://github.com/awslabs/llrt", rev = "66603cdadc4a9817c0a7c31e22e549d07e724163" }

[profile.release]
debug = false
lto = true
strip = true
opt-level = "s"
codegen-units = 1
